--- a/hello-world/.gitignore
+++ b/hello-world/.gitignore
@@ -4,3 +4,37 @@ artifacts/
 build/
 # Aiken's default documentation export
 docs/
+
+# address
+me.sk
+me.addr
+
+# Node.js dependencies
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
+# Environment variable files
+.env
+.env.test
+.env.production
+.env.local
+
+# Optional npm cache directory
+.npm/
+
+# Optional eslint cache
+.eslintcache
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
