--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@meshsdk/core": "1.9.0-beta.53",
     "@meshsdk/core-csl": "1.9.0-beta.53",
+    "dotenv": "^16.5.0",
     "tsx": "^4.19.4"
   }
 }
